Added item lookup with search when editing order line

--- a/app/orderdetail/orderdetail.component.html
+++ b/app/orderdetail/orderdetail.component.html
@@ -61,7 +61,7 @@
         <StackLayout height="90%">
             <GridLayout columns="3*,3*,3*,3*" height="50" class="listHeader">
                 <Label row="0" col="0" text="Line#"></Label>
-                <Label row="0" col="1" text="Item#"></Label>
+                <Label row="0" col="1" text="Item"></Label>
                 <Label row="0" col="2" text="Price"></Label>
                 <Label row="0" col="3" text="Qty"></Label>
             </GridLayout>
