--- a/app/app.common.css
+++ b/app/app.common.css
@@ -34,6 +34,15 @@ DatePicker {
     font-size: 25;
 }
 
+.searchInput {
+    color: white;
+    font-size: 20;
+    border-width: 2px;
+    border-color: white;
+    margin-top: 10;
+    margin-bottom: 10;
+}
+
 .signinTitle {
     font-size: 25;
 }
