--- a/app/item/item.component.html
+++ b/app/item/item.component.html
@@ -14,6 +14,7 @@
 </StackLayout>
 
 <StackLayout [visibility]="(app.loading)?'collapse':'visible'">
+    <Label [text]="dsItem.ItemName" class="customerName"></Label>
     <ListView [items]="itemData" height="60%">
             <ng-template let-itemData="item" let-odd="odd">
             <GridLayout columns="6*,6*" height="50" padding="5">
