--- a/app/orderdetail/orderdetail.component.html
+++ b/app/orderdetail/orderdetail.component.html
@@ -20,13 +20,13 @@
     <StackLayout [visibility]="(selectedTab===0 && !showingDatePicker)?'visible':'collapse'" backgroundColor="black">
         <StackLayout height="90%">
             <Button text="Remove Order" class="appButton" (tap)="confirmRemoveOrder()"></Button>
-            <ListView id="orderDataList" [items]="orderData">
+            <ListView id="orderDataList" [items]="orderData" backgroundColor="white">
                 <ng-template let-orderData="item" let-odd="odd" let-index="index">
-                <GridLayout columns="6*,6*" height="50" padding="5">
-                    <Label row="0" col="0" [text]="orderData.columnLabel" class="columnLabel"></Label>
-                    <TextField row="0" col="1" #input [text]="orderData.columnValue" class="columnValue" (focus)="editOrder(index)" (blur)="updateOrder(index,input.text)" [visibility]="(orderData.editable)?'visible':'collapse'"></TextField>
-                    <Label row="0" col="1" [text]="orderData.columnValue" class="columnValue" [visibility]="(!orderData.editable&&!orderData.showDatePicker)?'visible':'collapse'"></Label>
-                    <Label row="0" col="1" [text]="orderData.columnValue" class="columnValue" (tap)="editDate(index)" [visibility]="(orderData.showDatePicker)?'visible':'collapse'"></Label>
+                <GridLayout columns="6*,6*" height="50" padding="5" class="listEven">
+                    <Label row="0" col="0" [text]="orderData.columnLabel" class="columnLabel" verticalAlignment="center"></Label>
+                    <TextField row="0" col="1" #input [text]="orderData.columnValue" class="columnValue" (focus)="editOrder(index)" (blur)="updateOrder(index,input.text)" [visibility]="(orderData.editable&&!orderData.showDatePicker)?'visible':'collapse'"></TextField>
+                    <Label row="0" col="1" [text]="orderData.columnValue" class="columnValue" [visibility]="(!orderData.editable&&!orderData.showDatePicker)?'visible':'collapse'" verticalAlignment="center"></Label>
+                    <Label row="0" col="1" [text]="orderData.columnValue" class="columnValue" (tap)="editDate(index)" [visibility]="(orderData.showDatePicker)?'visible':'collapse'" verticalAlignment="center"></Label>
                 </GridLayout>
                 </ng-template>
             </ListView>
@@ -35,7 +35,7 @@
 
     <!-- Date Picker for order date fields -->
     <StackLayout [visibility]="(selectedTab===0 && showingDatePicker)?'visible':'collapse'" backgroundColor="black">
-        <GridLayout columns="1*,3*,1*" height="10%">
+        <GridLayout columns="1*,3*,1*" height="10%" class="listEven">
             <Button col="0" [text]="cancelIcon" class="redIcon" (tap)="cancelEditDate()"></Button>
             <Label col="1" [text]="editColumn" class="editColumn"></Label>
             <Button col="2" [text]="doneIcon" class="greenIcon" (tap)="doneEditDate()"></Button>
@@ -45,12 +45,12 @@
     
     <!-- Customer tab -->
     <StackLayout [visibility]="(selectedTab===1)?'visible':'collapse'" backgroundColor="black">
-        <ListView id="customerDataList" [items]="customerData" height="90%">
+        <ListView id="customerDataList" [items]="customerData" height="90%" backgroundColor="white">
             <ng-template let-customerData="item" let-odd="odd" let-index="index">
-            <GridLayout columns="6*,6*" height="50" padding="5">
-                <Label row="0" col="0" [text]="customerData.columnLabel" class="columnLabel"></Label>
-                <TextField row="0" col="1" #input [text]="customerData.columnValue" class="columnValue" (focus)="editCustomer({index:index})" (blur)="updateCustomer(index,input.text)" [visibility]="(customerData.editable)?'visible':'collapse'"></TextField>
-                <Label row="0" col="1" [text]="customerData.columnValue" class="columnValue" [visibility]="(!customerData.editable)?'visible':'collapse'"></Label>
+            <GridLayout columns="6*,6*" height="50" padding="5" class="listEven">
+                <Label row="0" col="0" [text]="customerData.columnLabel" class="columnLabel" verticalAlignment="center"></Label>
+                <TextField row="0" col="1" #input [text]="customerData.columnValue" class="columnValue" (focus)="editCustomer({index:index})" (blur)="updateCustomer(index,input.text)" [visibility]="(customerData.editable)?'visible':'collapse'" verticalAlignment="center"></TextField>
+                <Label row="0" col="1" [text]="customerData.columnValue" class="columnValue" [visibility]="(!customerData.editable)?'visible':'collapse'" verticalAlignment="center"></Label>
             </GridLayout>
             </ng-template>
         </ListView>
@@ -59,19 +59,19 @@
     <!-- Order lines tab -->
     <StackLayout [visibility]="(selectedTab===2)?'visible':'collapse'" backgroundColor="black">
         <StackLayout height="90%">
-            <GridLayout columns="3*,3*,3*,3*" height="50" class="listHeader">
+            <GridLayout columns="3*,3*,3*,3*" height="50" class="listHeader" verticalAlignment="center">
                 <Label row="0" col="0" text="Line#"></Label>
                 <Label row="0" col="1" text="Item"></Label>
                 <Label row="0" col="2" text="Price"></Label>
                 <Label row="0" col="3" text="Qty"></Label>
             </GridLayout>
-            <ListView [items]="ttOrderLine" (itemTap)="showLine($event)" height="100%">
+            <ListView [items]="ttOrderLine" (itemTap)="showLine($event)" height="100%" backgroundColor="white">
                 <ng-template let-ttOrderLine="item" let-odd="odd">
-                <GridLayout columns="3*,3*,3*,3*" height="50" padding="5" [ngClass]="{'listOdd':odd}">
-                    <Label row="0" col="0" [text]="ttOrderLine.Linenum"></Label>
-                    <Label row="0" col="1" [text]="ttOrderLine.Itemnum"></Label>
-                    <Label row="0" col="2" [text]="'$'+ttOrderLine.Price"></Label>
-                    <Label row="0" col="3" [text]="ttOrderLine.Qty"></Label>
+                <GridLayout columns="3*,3*,3*,3*" height="50" padding="5" class="listEven" [ngClass]="{'listOdd':odd}">
+                    <Label row="0" col="0" [text]="ttOrderLine.Linenum" verticalAlignment="center"></Label>
+                    <Label row="0" col="1" [text]="ttOrderLine.Itemnum" verticalAlignment="center"></Label>
+                    <Label row="0" col="2" [text]="'$'+ttOrderLine.Price" verticalAlignment="center"></Label>
+                    <Label row="0" col="3" [text]="ttOrderLine.Qty" verticalAlignment="center"></Label>
                 </GridLayout>
                 </ng-template>
             </ListView>
@@ -80,8 +80,8 @@
 
     <!-- tabs -->
     <GridLayout columns="1*,1*,1*" height="10%" top="90%">
-        <Label col="0" text="Order"    class="icon" (tap)="selectTab(0)" [ngClass]="{'tab':selectedTab!==0,'tabSelected':selectedTab===0}"></Label>
-        <Label col="1" text="Customer" class="icon" (tap)="selectTab(1)" [ngClass]="{'tab':selectedTab!==1,'tabSelected':selectedTab===1}"></Label>
-        <Label col="2" text="Lines"    class="icon" (tap)="selectTab(2)" [ngClass]="{'tab':selectedTab!==2,'tabSelected':selectedTab===2}"></Label>
+        <Label col="0" text="Order"    (tap)="selectTab(0)" [ngClass]="{'tab':selectedTab!==0,'tabSelected':selectedTab===0}"></Label>
+        <Label col="1" text="Customer" (tap)="selectTab(1)" [ngClass]="{'tab':selectedTab!==1,'tabSelected':selectedTab===1}"></Label>
+        <Label col="2" text="Lines"    (tap)="selectTab(2)" [ngClass]="{'tab':selectedTab!==2,'tabSelected':selectedTab===2}"></Label>
     </GridLayout>
 </StackLayout>
