--- a/app/signin/signin.component.html
+++ b/app/signin/signin.component.html
@@ -8,11 +8,12 @@
 </ActionBar>
 
 <StackLayout backgroundColor="black" style="padding:30px;">
-    <Image src="~/assets/img/ball.png" class="signinBall"></Image>
+    <Image src="~/assets/img/ball.png" class="signinBall" [visibility]="(smallScreen)?'collapse':'visible'"></Image>
     <TextField id="userName" hint="👤 Username" editable="{{fieldsEnabled}}" class="signinInput" (textChange)="newUsername()"></TextField>
     <TextField id="password" hint="🔑 Password" editable="{{fieldsEnabled}}" class="signinInput" (textChange)="newPassword()" secure="true"></TextField>
     <Button [text]="btnText" (tap)="signin()" isEnabled="{{btnEnabled}}" class="appButton"></Button>
-    <Label text="NativeScript Kinvey OpenEdge Sports Demo App" class="appTitle" textWrap="true"></Label>
+    <Label text="NativeScript Kinvey" class="appTitle" textWrap="true"></Label>
+    <Label text="OpenEdge Sports" class="appTitle" textWrap="true"></Label>
     <Label [text]="'Version ' + app.props.version" class="appInfo"></Label>
     <Label [text]="app.props.date" class="appInfo"></Label>
     <Button text="progress.com/company" class="appURL" (tap)="launchCompany()"></Button>
