--- a/app/orderdetail/orderdetail.component.html
+++ b/app/orderdetail/orderdetail.component.html
@@ -80,8 +80,8 @@
 
     <!-- tabs -->
     <GridLayout columns="1*,1*,1*" height="10%" top="90%">
-        <Label col="0" text="Order"    (tap)="selectTab(0)" [ngClass]="{'tab':selectedTab!==0,'tabSelected':selectedTab===0}"></Label>
-        <Label col="1" text="Customer" (tap)="selectTab(1)" [ngClass]="{'tab':selectedTab!==1,'tabSelected':selectedTab===1}"></Label>
-        <Label col="2" text="Lines"    (tap)="selectTab(2)" [ngClass]="{'tab':selectedTab!==2,'tabSelected':selectedTab===2}"></Label>
+        <Label col="0" text="Order"    (tap)="selectTab(0)" class="tab" [ngClass]="{'tabSelected':selectedTab===0}"></Label>
+        <Label col="1" text="Customer" (tap)="selectTab(1)" class="tab" [ngClass]="{'tabSelected':selectedTab===1}"></Label>
+        <Label col="2" text="Lines"    (tap)="selectTab(2)" class="tab" [ngClass]="{'tabSelected':selectedTab===2}"></Label>
     </GridLayout>
 </StackLayout>
